# algo-thinking

./: CMakeLists.txt
external_sources/: level_with_most_nodes.cpp
golang/: go.mod  main.go
golang/problems/: halloween_haul.go  halloween_haul_test.go
golang/problems/descendant_distance/: descendant_distance.go  descendant_distance_test.go
golang/problems/halloween_haul/: halloween_haul.go  halloween_haul_test.go
lib/: debug.h  macros.h
problems/: compound_words.c  compound_words.cpp  constructable_word.cpp  delete_a_letter.cpp  food_lines.cpp  unique_snowflakes.cpp
